--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
       - uses: actions/checkout@v3
@@ -41,7 +41,7 @@ jobs:
       
       - name: Commit Files Report # transfer the new html files back into the repository
         run: |
-          git config --local user.name "pempekriting"
+          git config --local user.name "rezaffadillah"
           git add ./report
           git commit -m "Updating the repository report"
     
